--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             </div>
         </section>
         <section class="container">
-            <details class="box">
+            <details class="box" name="homepageDetails">
                 <summary>
                     <h2>Hackathon</h2>
                 </summary>
@@ -77,7 +77,7 @@
         </section>
 
         <section class="container">
-            <details class="box">
+            <details class="box" name="homepageDetails">
                 <summary>
                     <h2>Reflectie</h2>
                 </summary>
@@ -101,7 +101,7 @@
         </section>
 
         <section class="container">
-            <details class="box">
+            <details class="box" name="homepageDetails">
                 <summary>
                     <h2>Meesterproef</h2>
                 </summary>
@@ -161,7 +161,7 @@
         </section>
 
         <section class="container">
-            <details class="box">
+            <details class="box" name="homepageDetails">
                 <summary>
                     <h2>CSS day</h2>
                 </summary>
