--- a/pages/weekly_nerd-1.html
+++ b/pages/weekly_nerd-1.html
@@ -33,7 +33,16 @@
     </header>
 
     <main class="container">
+
+
+
         <section class="details">
+            <nav class="breadcrumbs"></nav>
+
+            <div class="detailsImage"></div>
+
+            <div class="detailHeader"></div>
+
             <div class="detailsInfo">
                 <h3>Rule of least power</h3>
                 <p>
@@ -57,7 +66,8 @@
                     <li><b>Saturation (Verzadiging):</b><br /> Hoe intens of levendig de kleur is, uitgedrukt in een
                         percentage (0% is grijs, 100% is volledig verzadigd).</li>
 
-                    <li><b>Lightness (Helderheid):</b><br /> Dit bepaalt hoe licht of donker een kleur is, uitgedrukt in een
+                    <li><b>Lightness (Helderheid):</b><br /> Dit bepaalt hoe licht of donker een kleur is, uitgedrukt in
+                        een
                         percentage.
                         <ul>
                             <li>0% is volledig zwart.</li>
@@ -86,6 +96,8 @@
                         <code>&lt;img&gt;</code>-element bevatten en geeft ze een groene rand.</li>
                     </p>
             </div>
+
+            <nav class="nextPrevious"></nav>
         </section>
     </main>
 
