--- a/pages/weekly_nerd-10.html
+++ b/pages/weekly_nerd-10.html
@@ -34,9 +34,36 @@
 
     <main class="container">
         <section class="details">
+
+        <nav class="breadcrumbs"></nav>
+
+        <div class="detailsImage"></div>
+
+        <div class="detailHeader"></div>
+
             <div class="detailsInfo">
-                <h2>Experience is everything</h2>
+                <h2>Twitter bot</h2>
+                <p>
+                    2 doelen
+                <ol>
+                    <li>Haal alle volgers op van een account</li>
+                    <li>Volg deze accounts op een random moment</li>
+                </ol>
+                </p>
+
+                <h2>Gebruikte services</h2>
+                <p>
+                <ul>
+                    <li>Puppeteer browser automation</li>
+                    <li>Installeren in n8n</li>
+                    <li>Progress database</li>
+                    <li>Docker containerisation</li>
+                    <li>Ubunto server</li>
+                </ul>
+                </p>
             </div>
+
+            <nav class="nextPrevious"></nav>
         </section>
     </main>
 
