--- a/pages/weekly_nerd-3.html
+++ b/pages/weekly_nerd-3.html
@@ -34,6 +34,13 @@
 
     <main class="container">
         <section class="details">
+
+            <nav class="breadcrumbs"></nav>
+
+            <div class="detailsImage"></div>
+
+            <div class="detailHeader"></div>
+
             <div class="detailsInfo">
                 <h3>Info</h3>
 
@@ -49,24 +56,26 @@
 
                 <h4>Stappenplan</h4>
                 <p>
-                    <ol>
-                        <li>Core functionaliteiten</li>
-                        <li>Simpelste technologie</li>
-                        <li>Verbeteren</li>
-                    </ol>
+                <ol>
+                    <li>Core functionaliteiten</li>
+                    <li>Simpelste technologie</li>
+                    <li>Verbeteren</li>
+                </ol>
                 </p>
 
                 <h4>Storage</h4>
                 <p>
-                    <ul>
-                        <li>Cookies</li>
-                        <li>Local storage</li>
-                        <li>Session storage</li>
-                        <li>IndexDB</li>
-                        <li>Cache API</li>
-                    </ul>
+                <ul>
+                    <li>Cookies</li>
+                    <li>Local storage</li>
+                    <li>Session storage</li>
+                    <li>IndexDB</li>
+                    <li>Cache API</li>
+                </ul>
                 </p>
             </div>
+
+            <nav class="nextPrevious"></nav>
         </section>
     </main>
 
