--- a/pages/weekly_nerd-4.html
+++ b/pages/weekly_nerd-4.html
@@ -34,6 +34,13 @@
 
     <main class="container">
         <section class="details">
+
+        <nav class="breadcrumbs"></nav>
+
+        <div class="detailsImage"></div>
+
+        <div class="detailHeader"></div>
+
             <div class="detailsInfo">
                 <h3>Info</h3>
 
@@ -59,6 +66,8 @@
                 <h4>Imperative of Declarative programmeren</h4>
                 <p>Dat ligt eraan...</p>
             </div>
+
+            <nav class="nextPrevious"></nav>
         </section>
     </main>
 
