--- a/pages/weekly_nerd-5.html
+++ b/pages/weekly_nerd-5.html
@@ -34,6 +34,13 @@
 
     <main class="container">
         <section class="details">
+
+        <nav class="breadcrumbs"></nav>
+
+        <div class="detailsImage"></div>
+
+        <div class="detailHeader"></div>
+
             <div class="detailsInfo">
                 <h3>Info</h3>
                 <p>
@@ -100,6 +107,8 @@
                     vrijwilligers om ze te repareren.
                 </p>
             </div>
+
+            <nav class="nextPrevious"></nav>
         </section>
     </main>
 
