--- a/pages/weekly_nerd-7.html
+++ b/pages/weekly_nerd-7.html
@@ -34,6 +34,13 @@
 
     <main class="container">
         <section class="details">
+
+        <nav class="breadcrumbs"></nav>
+
+        <div class="detailsImage"></div>
+
+        <div class="detailHeader"></div>
+
             <div class="detailsInfo">
                 <h3>Inclusive design & accessibility</h3>
                 
@@ -66,6 +73,8 @@
                     Het is belangrijk dat de tekst goed leesbaar is, zodat iedereen de website kan gebruiken.
                 </p>
             </div>
+
+            <nav class="nextPrevious"></nav>
         </section>
     </main>
 
