--- a/pages/weekly_nerd-8.html
+++ b/pages/weekly_nerd-8.html
@@ -34,23 +34,33 @@
 
     <main class="container">
         <section class="details">
-            <div class="detailsInfo">
-                <h3>Defenitie van accessibility</h3>
-                <p>
-                    De kwaliteit van het kunnen gebruiken van een service, waar iedereen, 
-                    inclusief mensen met een beperking, toegang tot heeft en gebruik van kan maken.
-                </p>
 
-                <h4>Wetgeving</h4>
+        <nav class="breadcrumbs"></nav>
+
+        <div class="detailsImage"></div>
+
+        <div class="detailHeader"></div>
+
+            <div class="detailsInfo">
                 <p>
-                    <ul>
-                        <li>Wcag</li>
-                        <li>EU Wetgeving</li>
-                        <li>Nieuwe Nederlandse wetgeving</li>
-                    </ul>
-                    
+                    Nienke vertelde over haar afstudeerproject bij het GVB. Ze onderzocht hoe toegankelijk de GVB-website
+                    is, vooral voor oudere mensen en mensen die slechtziend zijn.
+                </p>
+                <p>
+                    Ze keek hoe deze groep de website en het openbaar vervoer gebruikt. Hiervoor sprak ze met
+                    verschillende mensen en deed ze veel onderzoek.
+                </p>
+                <p>
+                    Dit onderwerp is belangrijk, omdat er steeds strengere regels komen en het internet voor iedereen
+                    goed bruikbaar moet zijn.
+                </p>
+                <p>
+                    Na haar onderzoek kreeg ze zelfs een baan bij het GVB om hen te helpen met het verbeteren van de
+                    toegankelijkheid.
                 </p>
             </div>
+
+            <nav class="nextPrevious"></nav>
         </section>
     </main>
 
