--- a/pages/weekly_nerd-2.html
+++ b/pages/weekly_nerd-2.html
@@ -34,6 +34,13 @@
 
     <main class="container">
         <section class="details">
+
+        <nav class="breadcrumbs"></nav>
+
+        <div class="detailsImage"></div>
+
+        <div class="detailHeader"></div>
+
             <div class="detailsInfo">
                 <h3>Info</h3>
                 <p>
@@ -84,6 +91,8 @@
                     wat mensen graag schrijven en zodat niet alleen grote bedrijven bepalen wat jij ziet.
                 </p>
             </div>
+
+            <nav class="nextPrevious"></nav>
         </section>
     </main>
 
