--- a/pages/weekly_nerd-9.html
+++ b/pages/weekly_nerd-9.html
@@ -34,9 +34,18 @@
 
     <main class="container">
         <section class="details">
+
+        <nav class="breadcrumbs"></nav>
+
+        <div class="detailsImage"></div>
+
+        <div class="detailHeader"></div>
+
             <div class="detailsInfo">
                 <h2>Digitale toegang in de praktijk</h2>
             </div>
+
+            <nav class="nextPrevious"></nav>
         </section>
     </main>
 
