--- a/index.html
+++ b/index.html
@@ -203,6 +203,139 @@
 
             </details>
         </section>
+
+        <section class="container">
+            <details class="box" name="homepageDetails">
+                <summary>
+                    <h2>Reflectie en vervolg</h2>
+                </summary>
+
+                <h3>Wat ga ik meenemen van de weekly nerd sprekers</h3>
+                <p>
+                    Ik ga vooral de praktische tips en technieken meenemen die ik heb geleerd van de sprekers. Hun
+                    inzichten in CSS en webontwikkeling hebben mijn begrip van de materie verdiept en ik ben van plan
+                    om deze kennis toe te passen in mijn toekomstige projecten.
+                </p>
+
+                <p>
+                    Andere sprekers zoals Peter Paul Koch hebben verteld over de mogelijke toekomst van het web.
+                </p>
+
+                <h3>Hoe is het gegaan tijdens de meesterproef</h3>
+                <p>
+                    De meesterproef heeft mij veel geleerd over het werken met een team en het omgaan met
+                    deadlines. Het was een uitdagende maar leerzame ervaring. Ik heb veel geleerd over het
+                    ontwikkelen van een product van begin tot eind en het belang van goede communicatie binnen een team.
+                </p>
+
+                <p>
+                    Ook heb ik geleerd hoe werken met een echte opdrachtgever is. Dit was een nieuwe ervaring
+                    voor mij, maar het was een waardevolle ervaring. Het heeft me geleerd hoe belangrijk het is om
+                    goed te communiceren en verwachtingen te managen.
+                </p>
+
+                <h4>Wat was nog lastig</h4>
+                <p>
+                    Het lastigste vond ik het werken met een echte opdrachtgever. Het was soms moeilijk om de
+                    verwachtingen van de opdrachtgever te managen en om te zorgen dat we op dezelfde
+                    golflengte zaten. Ook was het soms lastig om de juiste balans te vinden tussen de wensen van de
+                    opdrachtgever en de technische mogelijkheden.
+                </p>
+
+                <h4>Waar ben ik trots op</h4>
+                <p>
+                    Ik ben trots op het eindresultaat van de meesterproef. Het was een uitdagend project, maar we hebben
+                    een mooi product opgeleverd. Ik ben ook trots op de samenwerking en inzetting met mijn teamgenoten.
+                </p>
+
+                <h4>Hoe is het gegaan met de leerdoelen</h4>
+                <p>
+                    De leerdoelen die ik heb gesteld voor de meesterproef zijn goed verlopen. Ik heb
+                    meerdere manieren bedacht om problemen op te lossen en daaruit de beste genomen, feedback gevraagd
+                    aan docenten en hoe hun de problemen die ik tegenkwam zouden oplossen. Ook heb ik
+                    de documentatie elke week bijgehouden om te zorgen dat deze up-to-date bleef.
+                </p>
+
+                <h4>Wat zijn de highlights van de weekly nerds</h4>
+                <p>
+                    De highlights van de weekly nerds waren de verschillende sprekers en hun presentaties. Elke spreker
+                    had zijn eigen unieke stijl en aanpak, wat het interessant maakte om naar te luisteren. De
+                    meeste presentaties waren informatief en interessant, en ik heb veel geleerd van de verschillende
+                    onderwerpen
+                    die werden behandeld.
+                </p>
+
+                <p>
+                    Andere verhalen vond ik zelf wat minder interessant, maar dat is natuurlijk persoonlijk. Zelf vond
+                    ik de spreker over de printers wat minder interessant. De software die hij had geschreven gebruikt
+                    de kapper die ik heb ook dus dat vond ik wel leuk om te zien.
+                </p>
+
+                <h4>De highlights van elk vak</h4>
+
+                <h5>WAFS</h5>
+                <p>
+                    Bij Web app from scratch hebben we geleerd hoe we een webapplicatie kunnen bouwen die bij ons past.
+                    We hebben geleerd hoe we een webapplicatie kunnen bouwen met behulp van HTML, CSS en JavaScript.
+                </p>
+
+                <p>
+                    Het leukste aan dit vak was de kleine tijdsdruk die er was want we hadden maar 1 week. En de
+                    volledig eigen invulling die we eraan konden geven.
+                </p>
+
+                <h5>CSS</h5>
+                <p>
+                    Bij CSS hebben we geleerd hoe we CSS kunnen gebruiken om onze webapplicaties er beter uit te laten
+                    zien. We hebben geleerd hoe we CSS kunnen gebruiken om onze webapplicaties responsief te maken en
+                    hoe we CSS kunnen gebruiken om onze webapplicaties toegankelijk te maken.
+                </p>
+
+                <p>
+
+                </p>
+
+                <h5>BT</h5>
+                <p>
+                    Bij BT hebben we geleerd hoe je css als extra kan gebruiken en niet als basis. We hebben geleerd hoe
+                    je semantische HTML kan gebruiken en hoe je CSS kan gebruiken om je webapplicaties er beter uit te
+                    laten zien, maar niet nodig is voor de werking van de webapplicatie.
+                </p>
+
+                <p>
+                    Het leukste aan BT vond ik het testen op oude ipod om te kijken of het werkte. Dit was een
+                    interessante ervaring omdat het me liet zien wat er allemaal mogelijk is met CSS en hoe
+                    belangrijk het is om te testen op verschillende apparaten.
+                </p>
+
+                <h5>HCD</h5>
+                <p>
+                    Bij HCD hebben we geleerd hoe we onze webapplicaties kunnen ontwerpen met de gebruiker in gedachten.
+                    We hebben geleerd hoe we onze webapplicaties kunnen testen op gebruiksvriendelijkheid en hoe we
+                    onze webapplicaties kunnen verbeteren op basis van feedback van gebruikers.
+                </p>
+
+                <p>
+                    Het leukste aan HCD vond ik de connectie met de specefieke gebruiker en het verhaal dat hij vertelde
+                    waar hij tegen aan liep met allerdaagse dingen zoals het gebruiken van een telefoon. Dit gaf me
+                    een beter inzicht in hoe belangrijk het is om de gebruiker centraal te stellen bij het ontwerpen van
+                    webapplicaties.
+                </p>
+
+                <h5>API</h5>
+                <p>
+                    Bij API hebben we geleerd hoe je via API's kan communiceren met andere applicaties en hoe je
+                    deze kan gebruiken om data op te halen en te versturen. We hebben geleerd hoe we API's kunnen
+                    gebruiken om gegevens uit te wisselen tussen verschillende systemen.
+                </p>
+
+                <p>
+                    Het leukste aan API vond ik de dynamische data die we konden ophalen en hoe we deze konden gebruiken
+                    in onze webapplicaties.
+                </p>
+
+            </details>
+        </section>
     </main>
 
     <footer>
