--- a/index.html
+++ b/index.html
@@ -292,7 +292,7 @@
                 </p>
 
                 <p>
-
+                    Het leukste aan css vond ik de nieuwe manieren om elementen aan te roepen en hoe we deze konden gebruiken zonder javascript.
                 </p>
 
                 <h5>BT</h5>
